fix: make individual skill wrap responsive

--- a/assets/style.css
+++ b/assets/style.css
@@ -312,7 +312,8 @@ button {
   text-align: left;
   background-color: hsla(228, 9%, 11%, 0.1);
   padding: 0.5rem;
-  gap: 1rem;
+  gap: 0.5rem;
+  font-size: 12px;
 }
 
 /* Footer */
@@ -369,6 +370,8 @@ button {
   }
 
   .individual-skill-wrap {
+    font-size: var(--normal-font);
+    gap: 1rem;
     padding: 1rem;
   }
 
